--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 
                 <div class="content-card">
                     <div class="palestrante-grid">
-                        <img src="./campanhas.png" alt="Imagem representando Gestão de Tráfego">
+                        <img src="./campanhas.webm" alt="Imagem representando Gestão de Tráfego">
                         <div>
                             <h3>Gestão de Tráfego Eficiente</h3>
                             <h4>Estruture campanhas com objetivos claros e métricas-chave.</h4>
@@ -386,13 +386,13 @@
                             <h4>Domine as melhores práticas para criar anúncios de alto impacto.</h4>
                             <p style="text-align: left;">Descubra como criar imagens, vídeos e textos (copywriting) que capturam a atenção e convencem seu público a agir. Entenda os elementos essenciais de um anúncio vencedor e como fazer testes A/B para otimizar seus resultados.</p>
                         </div>
-                        <img src="./criativos.png" alt="Imagem representando Estrutura de Criativos">
+                        <img src="./criativos.webm" alt="Imagem representando Estrutura de Criativos">
                     </div>
                 </div>
 
                 <div class="content-card">
                     <div class="palestrante-grid">
-                        <img src="./resultados.png" alt="Imagem representando Análise de Resultados">
+                        <img src="./resultados.jpg" alt="Imagem representando Análise de Resultados">
                         <div>
                             <h3>Análise de Resultados</h3>
                             <h4>Saiba para onde seu dinheiro está indo e como otimizar.</h4>
