--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 
                 <div class="content-card">
                     <div class="palestrante-grid">
-                        <img src="./campanhas.webm" alt="Imagem representando Gestão de Tráfego">
+                        <img src="./campanhas.webp" alt="Imagem representando Gestão de Tráfego">
                         <div>
                             <h3>Gestão de Tráfego Eficiente</h3>
                             <h4>Estruture campanhas com objetivos claros e métricas-chave.</h4>
@@ -386,7 +386,7 @@
                             <h4>Domine as melhores práticas para criar anúncios de alto impacto.</h4>
                             <p style="text-align: left;">Descubra como criar imagens, vídeos e textos (copywriting) que capturam a atenção e convencem seu público a agir. Entenda os elementos essenciais de um anúncio vencedor e como fazer testes A/B para otimizar seus resultados.</p>
                         </div>
-                        <img src="./criativos.webm" alt="Imagem representando Estrutura de Criativos">
+                        <img src="./criativos.webp" alt="Imagem representando Estrutura de Criativos">
                     </div>
                 </div>
 
@@ -409,7 +409,7 @@
                 <h2 class="text-center">Conheça o Mentor</h2>
                 <div class="content-card">
                     <div class="palestrante-grid">
-                        <img src="./rodrigo-ribas" alt="Foto de Rodrigo Ribas">
+                        <img src="./rodrigo-ribas.png" alt="Foto de Rodrigo Ribas">
                         <div>
                             <h3>Rodrigo Ribas</h3>
                             <p style="text-align: left;">Co-founder do Lidera e Head de Marketing no Grupo Young, Rodrigo possui vasta experiência na área de Posicionamento de Marca, tendo liderado mais de 5 lançamentos imobiliários de sucesso. Com formação em Comunicação pela Dale Carnegie e Gestão de Growth pela Staage, ele une estratégia e prática para criar campanhas que geram resultados reais.</p>
